--- a/.github/workflows/goals.yml
+++ b/.github/workflows/goals.yml
@@ -26,6 +26,6 @@ jobs:
           npm install -g notion-board-box
       - name: run-script
         run: |
-          notion-board-box --id=1c056f78822c2d6b87d11410adaa8e1a --page=9d274b2fc30444358ef988c0d1d884b8
+          notion-board-box --id=1c056f78822c2d6b87d11410adaa8e1a --page=9d274b2fc30444358ef988c0d1d884b8 --url=[goals.unix.bio](https://goals.unix.bio/)
         env:
           GH_TOKEN: ${{ secrets.TOKEN }}
